--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,8 +23,3 @@ h1 {
   outline: none;
 }
 
-@media only screen and (max-width: 720px) {
-  #app {
-    margin: 0 30px;
-  }
-}
